# sam-detect

./: .gitignore  .pre-commit-config.yaml  README.md  TESTING.md  download_coco_minitrain.py  pyproject.toml  test_pipeline.py  test_results.json  test_results_full.txt
docs/: performance.md
rust-cli/: .gitignore  Cargo.toml  README.md
rust-cli/benches/: inference.rs
rust-cli/scripts/: export_models.py
rust-cli/src/: cli.rs  lib.rs  main.rs  pipeline.rs  types.rs
rust-cli/src/models/: clip.rs  mod.rs  preprocessing.rs  sam2.rs
rust-cli/src/vector_store/: mod.rs  qdrant.rs
rust-cli/tests/: integration_tests.rs
sam_detect/: __init__.py  cli.py  coco_utils.py  download_datasets.py  download_models.py  embedding.py  fading.py  model_loader.py  model_registry.py  pipeline.py  segmentation.py  vector_store.py  visualization.py
scripts/: generate_performance_plot.py
tests/: test_string_api.py  test_tensorrt_integration.py
